--- a/osu_hackathon/requirements.txt
+++ b/osu_hackathon/requirements.txt
@@ -1,4 +1,20 @@
-deap
-flask
-numpy
-pandas
+annotated-types==0.7.0
+blinker==1.9.0
+click==8.3.0
+colorama==0.4.6
+deap==1.4.3
+Flask==3.1.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+numpy==2.3.4
+pandas==2.3.3
+pydantic==2.12.3
+pydantic_core==2.41.4
+python-dateutil==2.9.0.post0
+pytz==2025.2
+six==1.17.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+Werkzeug==3.1.3
